# elizabeth_db

./: .gitignore  CMakeLists.txt  Makefile
src/: main.c
src/common/: error.h  types.h
src/storage/: page.c  page.h
tests/common/: test_framework.h
